# smart-system

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
.github/workflows/: esp-idf-build.yml
components/assets/: CMakeLists.txt  GPROlogo.c  GPROlogo.h  eyeIcon.c  eyeIcon.h  gproLogo15.c  lineProd.c  lineProd.h  online_arrow.c  online_arrow.h  personIcon.c  personIcon.h  scanBundle.c  scanEmp.c  scanLogin.c  send.c  send.h  server.c  server.c.bak  small_icon_wifi.c  successSign.c  successWhite.c  trendDown.c  trendUp.c  warning.c  wifi.c  wifi_excellent.c  wifi_excellent.h  wifi_fair.c  wifi_fair.h  wifi_good.c  wifi_good.h  wifi_notConnect.c  wifi_weak.c  wifi_weak.h
components/esp_littlefs/: idf_component.yml
components/lvgl/: lv_conf_template.h
components/lvgl/src/lv_font/: lv_font_montserrat_bold_10.c  lv_font_montserrat_bold_12.c  lv_font_montserrat_bold_14.c  lv_font_montserrat_bold_18.c  lv_font_montserrat_bold_20.c  lv_font_montserrat_bold_22.c  lv_font_montserrat_bold_28.c  lv_font_montserrat_bold_48.c  lv_font_montserrat_bold_8.c
components/lvgl_esp32_drivers/lvgl_tft/: Kconfig
main/: CMakeLists.txt  SmartWifi.c  Wifi_Espnow.c  app.c  databuffer.c  display.c  handleSpiffs.c  handlelittleFS.c  keypad.c  ledBuzz.c  main.c  myhttprequest.c  ota.c  rtc_sntp.c  screen.c  socketServer.c  table.c  util.c
main/include/: SmartWifi.h  Wifi_Espnow.h  app.h  databuffer.h  display.h  handleSpiffs.h  handlelittleFS.h  keypad.h  ledBuzz.h  myhttprequest.h  ota.h  rtc_sntp.h  screen.h  socketServer.h  table.h  target.h  util.h
(+1 files in other folders)
